// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RightPanel Clicking on object changes class and calls loadObject 1`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Clicking on object changes class and calls loadObject 2`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-primary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Clicking on object changes class and calls loadObject 3`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Clicking on object changes class and calls loadObject 4`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-primary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Clicking on object changes class and calls loadObject 5`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Clicking on object changes class and calls loadObject 6`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-primary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;

exports[`RightPanel Objects are loaded and information is correct 1`] = `
<div
  className="rightPanel col-md-3 col-sm-3"
>
  <button
    className="objectListHeader btn btn-primary btn-block"
  >
    Objects
  </button>
  <div
    className="objectList"
  >
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="1"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/1.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        1.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="2"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/2.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        2.jpeg
      </div>
    </button>
    <button
      className="objectListItem btn btn-block
                            btn-secondary"
      key="3"
      onClick={[Function]}
    >
      <div
        className="objectImage"
      >
        <img
          alt="selected object"
          src="/api/imp/objects/3.jpg"
        />
      </div>
      <div
        className="objectName"
      >
        3.jpeg
      </div>
    </button>
  </div>
</div>
`;
